Closed
Bug 227396
Opened 21 years ago
Closed 21 years ago
stack walking code broken on Fedora Core 1
Categories
(Core :: XPCOM, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: dbaron, Assigned: dbaron)
References
Details
(Whiteboard: [patch])
Attachments
(2 files)
|
1.67 KB,
patch
|
bryner
:
review+
|
Details | Diff | Splinter Review |
|
2.11 KB,
patch
|
bryner
:
review+
|
Details | Diff | Splinter Review |
blizzard says the stack walking code is broken on Fedora Core 1. The patch I'll
attach includes the fix that worked for blizzard plus some cleanup
| Assignee | ||
Comment 1•21 years ago
|
||
| Assignee | ||
Updated•21 years ago
|
Summary: stack walking code broken on Fedore Core 1 → stack walking code broken on Fedora Core 1
Whiteboard: [patch]
| Assignee | ||
Comment 2•21 years ago
|
||
Comment on attachment 136744 [details] [diff] [review]
patch
Well, I couldn't reproduce the problem, but this seems like a nice cleanup...
Attachment #136744 -
Flags: review?(bryner)
| Assignee | ||
Comment 3•21 years ago
|
||
Well, I see the problem with trace-malloc. (I probably didn't rebuild the
right thing before when I tried backing out the other patch. I had the patch
in my tree before I tested on Fedora.)
Note that without the change in the first part of this diff, the stack trace
shows one too many lines (one past __libc_start_main, which ends up being a
garbage symbol for nsAString::do_AssignFromReadable or something like that).
| Assignee | ||
Updated•21 years ago
|
Attachment #137811 -
Flags: review?(brendan)
| Assignee | ||
Comment 4•21 years ago
|
||
*** Bug 229479 has been marked as a duplicate of this bug. ***
Updated•21 years ago
|
Attachment #136744 -
Flags: review?(bryner) → review+
Updated•21 years ago
|
Attachment #137811 -
Flags: review?(brendan) → review+
| Assignee | ||
Comment 5•21 years ago
|
||
Fix checked in to trunk, 2004-01-03 11:15/16 -0800.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•