Remove pc tests in stack walking code that prevent it from working on Fedora Core 1.  b=227396  r=bryner